--- a/msgcntr/msgcntr-3.0.x-features-backport/messageforums-app/src/webapp/css/dialog.css
+++ b/msgcntr/msgcntr-3.0.x-features-backport/messageforums-app/src/webapp/css/dialog.css
@@ -8,8 +8,12 @@
 	border: solid 1px #525252;
 	background-color: white;
 	padding: 10px;
-	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
+}
+
+#dialogDiv{
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+        height: 305px !important;
 }
  
 .ui-dialog-container {
