LS-183 merge r313867 from 2.9.x branch

--- a/login/login-10.x_googleplus/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
+++ b/login/login-10.x_googleplus/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
@@ -24,7 +24,6 @@
 			<th colspan="2">${loginRequired}</th>
 		</tr>
 		<tr>
-			<td class="logo"></td>
 			<td class="form">
 				<form method="post" action="${action}" enctype="application/x-www-form-urlencoded">
 				#if (${notify})
@@ -59,6 +58,9 @@
 					#end
 					</table>
 				</form>
+			</td>
+			<td class="googleplus">
+				<a href="${googlePlusLoginUrl}" id="signInButton">Sign in with Google</a>
 			</td>
 		</tr>
 		</table>
