--- a/login/login-10.x_googleplus_and_saml/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
+++ b/login/login-10.x_googleplus_and_saml/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
@@ -21,7 +21,7 @@
 		<!-- xlogin.vm -->
 		<table class="login" cellpadding="0" cellspacing="0" border="0">
 		<tr>
-			<th colspan="2">${loginRequired}</th>
+			<th colspan="3">${loginRequired}</th>
 		</tr>
 		<tr>
 			<td class="form">
@@ -61,6 +61,9 @@
 			</td>
 			<td class="googleplus">
 				<a href="${googlePlusLoginUrl}" id="signInButton">Sign in with Google</a>
+			</td>
+			<td class="saml">
+				<a href="${samlLoginUrl}" id="samlsignin">Sign in with SAML</a>
 			</td>
 		</tr>
 		</table>
