SAK-28069 (ORE-706561) manual patch applied

--- a/custom_builds/142/site-manage/2.9.3.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-importSites.vm
+++ b/custom_builds/142/site-manage/2.9.3.x/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-importSites.vm
@@ -13,6 +13,12 @@
 	<p class="instruction">
 	$tlang.getString("import.choose")
 	</p>
+	
+	##from here
+	
+	
+	
+	
 	<form name="importSitesForm" action="#toolForm("$action")" method="post">
         <input type="hidden" name="eventSubmit_doContinue" value="x" />
         <input type="hidden" name="option" value="cancel" />
@@ -40,7 +46,16 @@
 										#set($toolTitle = $t.getTitle())
 									#end
 								#end
-								<h4>$toolTitle</h4>
+								<h4>$toolTitle
+								
+    								#if ($addMissingTools)
+    									## if the tool doesnt exist in the selected site, output icon
+    									#if(!$toolsInDestinationSite.contains($toolId))
+											<sup>+</sup>
+    									#end
+    								#end
+								
+								</h4>
 							</td>
 							#set ($siteCount=0)
 							#foreach($site in $importSites.keys())
@@ -68,6 +83,11 @@
 					#end
 			#end
 		</table>
+		
+		#if ($addMissingTools)
+			<p class="messageConfirmation">$tlang.getString("import.newtool")</p>
+		#end
+		
 		<input type="hidden" name="back" value="$!backIndex" />
 		<input type="hidden" name="templateIndex" value="$!templateIndex" />
 		<input type="hidden" name="continue" value="$continue" />
