--- a/custom_builds/112/login/sakai-10.x/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
+++ b/custom_builds/112/login/sakai-10.x/login-render-engine-impl/pack/src/webapp/vm/defaultskin/xlogin.vm
@@ -31,6 +31,9 @@
 					<div class="alertMessage">${notify}</div>
 				#end
 					<table border="0" class="loginform">
+					#if(${changePass})
+						<tr><td colspan="2">${passwordRequirements}</td></tr>
+					#end
 					<tr>
 						<td><label for="eid">${loginEidWording}</label></td>
 						<td><input name="eid" id="eid" value="${eid}" type="text" size="15"/></td>
@@ -40,6 +43,24 @@
 						<td><input name="pw" id="pw" value="${password}" type="password" onfocus="this.passwordfocus = true; " size="15"/></td>
 						<script type="text/javascript" src="/library/js/caps-lock-checker.js"></script>
 					</tr>
+					#if(${changePass})
+						<tr>
+						 <td>
+						<label for="newpass">${pwNewWording}</label>
+						</td>
+						<td class="shorttext">
+						<input name="newpass" id="newpass"  type="password" size="15"/>
+						</td>
+						</tr>
+						<tr>
+						<td>
+						<label for="newpassconfirm">${pwNewConfirmWording}</label>
+						</td>
+						<td class="shorttext">
+						<input name="newpassconfirm" id="newpassconfirm"  type="password" size="15"/>
+						</td>
+						</tr>
+					#end
 					#if (${loginAdvice})
 					<tr>
 						<td colspan="2">${loginAdvice}</td>
