Including patch for SAK-29001 in 2.9.x

--- a/sakai/portal/portal-SAK-29001-2.9.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/pda.vm
+++ b/sakai/portal/portal-SAK-29001-2.9.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/pda.vm
@@ -48,6 +48,9 @@ ${responseHead}
      <script type="text/javascript" language="JavaScript" src="${pageScriptPath}headscripts.js"></script>
 #end
 
+## If there's some extra header code defined, included it here
+${includeExtraHead}
+
 </head>
 <body class="portalBodyPDA">
 #if ( $pageTop )
