--- a/sakai/portal/portal-SAK-29001-2.9.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeStandardHead.vm
+++ b/sakai/portal/portal-SAK-29001-2.9.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeStandardHead.vm
@@ -120,5 +120,7 @@ ${sakai_html_head_js}
 ## required CSS for cluetip, bundled with the release
 <link href="${pageScriptPath}jquery/cluetip/1.2.5/css/jquery.cluetip.css" type="text/css" rel="stylesheet" media="all" />
 
+## If there's some extra header code defined, included it here
+${includeExtraHead}
 
 </head>
