--- a/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/webapp/content/templates/gradebookItem.html
+++ b/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/webapp/content/templates/gradebookItem.html
@@ -47,6 +47,13 @@
             	<label rsf:id="extraCredit_label" for="extraCredit">Extra Credit?</label>
 			</li>
 			<li>
+			<fieldset>
+					<div class="auto_submit_date_label">
+							<input rsf:id="auto_submit_date:" value="12/31/2007"/>
+					</div>
+			</fieldset>
+			</li>
+			<li>
     			<fieldset>
     			    <div class="due_date_label">
         			    <input rsf:id="require_due_date" type="checkbox" id="require_due_date"/>
