--- a/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/webapp/inc/assignmentEditing.jspf
+++ b/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/webapp/inc/assignmentEditing.jspf
@@ -64,6 +64,16 @@
     <t:inputCalendar id="dueDate" value="#{bean.assignment.dueDate}" renderAsPopup="true" renderPopupButtonAsImage="true" popupTodayString="#{msgs.date_entry_today_is}" popupWeekString="#{msgs.date_entry_week_header}" popupDateFormat="#{msgs.date_entry_format}" popupGotoString="#{msgs.date_entry_goto}" />
 		<h:message for="dueDate" styleClass="alertMessageInline" />
 	</h:panelGroup>
+
+  <h:panelGroup rendered="#{!bean.assignment.externallyMaintained}">
+		<h:outputLabel for="autoReleaseDate" id="autoReleaseDateLabel" value="#{msgs.auto_release_date}"/>
+		<h:outputText style="font-weight:normal;" value=" #{msgs.date_entry_format_description}"/>
+	</h:panelGroup>
+	<h:panelGroup rendered="#{!bean.assignment.externallyMaintained}">
+    <t:inputCalendar id="autoReleaseDate" value="#{bean.assignment.autoReleaseDate}" renderAsPopup="true" renderPopupButtonAsImage="true" popupTodayString="#{msgs.date_entry_today_is}" popupWeekString="#{msgs.date_entry_week_header}" />
+		<h:message for="autoReleaseDate" styleClass="alertMessageInline" />
+	</h:panelGroup>
+
 	
 	<h:outputText value="#{msgs.edit_assignment_due_date_external}" rendered="#{bean.assignment.externallyMaintained}" />
 	<h:outputText value="#{bean.assignment.dueDate}" rendered="#{bean.assignment.externallyMaintained}">
