--- a/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/webapp/inc/bulkNewItems.jspf
+++ b/custom_builds/7/gradebook/gradebook-10.x/app/ui/src/webapp/inc/bulkNewItems.jspf
@@ -115,6 +115,15 @@
 					<h:message for="dueDate" styleClass="alertMessageInline" />
 				</h:panelGroup>
 	
+				<h:panelGroup rendered="#{!item.assignment.externallyMaintained}">
+					<h:outputLabel for="autoReleaseDate" id="autoReleaseDateLabel" value="#{msgs.auto_release_date} #{msgs.date_entry_format_description}"/>
+				</h:panelGroup>
+				<h:panelGroup rendered="#{!item.assignment.externallyMaintained}">
+  					<t:inputCalendar id="autoReleaseDate" value="#{item.assignment.autoReleaseDate}" renderAsPopup="true" renderPopupButtonAsImage="true"
+  							popupTodayString="#{msgs.date_entry_today_is}" popupWeekString="#{msgs.date_entry_week_header}" />
+					<h:message for="autoReleaseDate" styleClass="alertMessageInline" />
+				</h:panelGroup>
+
 				<h:outputLabel for="selectCategory" id="categoryLabel" value="#{msgs.add_assignment_category}" rendered="#{bean.categoriesEnabled}" />
 				<h:panelGroup rendered="#{bean.categoriesEnabled}">
 					<h:selectOneMenu id="selectCategory" value="#{item.category}"  onchange="this.form.submit();">
