EST-6 LS-141 allow instructors to combine rosters without having site.add realm permission

--- a/custom_builds/7/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourse.vm
+++ b/custom_builds/7/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-newSiteCourse.vm
@@ -309,7 +309,7 @@ function redirectBasedOnSelection(){
 				
 
 		
-		#if ($termCourseList && $currentUserId != $userId)
+		#if (1==6 && $termCourseList && $currentUserId != $userId)
 					<div class="shorttext required">
 						<span class="reqStar">*</span>						
 						<label for="uniqname">		
