LS-138 EST-6 move customization to new 10.x neo style skin

--- a/custom_builds/7/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
+++ b/custom_builds/7/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
@@ -208,6 +208,10 @@
 							</a>
 							<a href="#" id="${site.siteId}" class="toolMenus">&nbsp;<span class="skip">Tools</span></a>
 						</li>
+					#elseif ( $site.published == 'false' && $site.siteUpdate == 'false' )
+						<li>
+							<div title="${site.fullTitle}" class="fullTitle walshUnpublishedSite">${site.siteTitle}</div>
+						</li>
 					#else
 						<li>
 							#if (( ${tabDisplayLabel} == 2 ) && ( ${site.shortDescription} ))
