svn merge -r311440:317790 https://source.sakaiproject.org/svn/assignment/branches/sakai-10.x/ .

--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_grading_submission.vm
@@ -175,7 +175,7 @@ function handleReportsTriangleDisclosure(btn)
 						#set($submitterId = $submitter.getDisplayId())
 						#if ($!submitterId)
 							##attach the displayId
-							#set($submitterName=$submitterName.concat("(").concat($submitterId).concat(")"))
+							#set($submitterName=$submitterName.concat(" (").concat($submitterId).concat(")"))
 						#end
 						#if ($!submitterName)
 							#if ($count == 1)
@@ -186,7 +186,13 @@ function handleReportsTriangleDisclosure(btn)
 						#end
 						#set ($count = $count + 1)
 					#end
+					
+					## SAK-17606
+					#if ($value_CheckAnonymousGrading.equals("true"))
+						$validator.escapeHtml($submission.anonymousSubmissionId)
+					#else
 					$validator.escapeHtml($!submitterNames)
+					#end
 				</td>
 			</tr>
 			#if ($!submissionType != 4)
