--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_preview_grading_submission.vm
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_preview_grading_submission.vm
@@ -69,7 +69,15 @@
 							#end
 							#set ($count = $count + 1)
 						#end
-						$!submitterNames
+						
+						## SAK-17606
+						#set($anonymousSubmissionId = $submission.getAnonymousSubmissionId())
+						#if ($value_CheckAnonymousGrading.equals("true"))
+							$anonymousSubmissionId
+						#else
+							$validator.escapeHtml($!submitterNames)
+						#end
+
 					</td>
 				</tr>
 				#if ($!submissionType != 4)
