--- a/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_list_assignments.vm
+++ b/assignment/assignment-10.x_features-backport/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_list_assignments.vm
@@ -23,6 +23,36 @@ function allowClick(object)
 	 ##return the current flag status
 	 return rv;
 }
+
+function params_unserialize(p){
+	var ret = [],
+    seg = p.replace(/^\?/,'').split('&'),
+    len = seg.length, i = 0, s;
+	for (;i<len;i++) {
+    	if (!seg[i]) { continue; }
+    	s = seg[i].split('=');
+		ret.push({'name':s[0],'value':s[1]});
+	}
+	return ret;
+}
+
+function duplicateLink(lnk) {
+	var params = params_unserialize(lnk.search.substring(1));
+	params.push({'name':'sakai_csrf_token','value':'$sakai_csrf_token'});
+	var myForm = document.createElement("form");
+	myForm.action = lnk.pathname;
+	myForm.method = "post";
+	for (var i=0; i<params.length; i++) {
+		var myInput = document.createElement("input");
+		myInput.type = "hidden";
+		myInput.name = params[i].name;
+		myInput.value = params[i].value;
+		myForm.appendChild(myInput);
+	}
+	document.body.appendChild(myForm);
+	myForm.submit();
+	return false;
+}
 </script>
 <div class="portletBody">
 	#if ($allowAddAssignment || ($withGrade && $!allowGradeSubmission))
@@ -356,7 +386,7 @@ function allowClick(object)
 										<div class="itemAction">
 											#set($prevAction=false)
 											#if ($!allowUpdateAssignment)#set($prevAction=true)<a href="#toolLinkParam("$action" "doEdit_assignment" "assignmentId=$validator.escapeUrl($assignmentReference)")">$!tlang.getString("gen.revi") <span class="skip">$validator.escapeHtml($validator.limit($!assignment.getTitle(), 64))</span></a>#end
-											#if ($allowAddAssignment&&$!allowUpdateAssignment)#if($prevAction) | #else#set($prevAction=true)#end<a href="#toolLinkParam("$action" "doDuplicate_assignment" "assignmentId=$validator.escapeUrl($assignmentReference)")">$!tlang.getString("dupli") <span class="skip">$validator.escapeHtml($validator.limit($!assignment.getTitle(), 64))</span></a>#end
+											#if ($allowAddAssignment&&$!allowUpdateAssignment)#if($prevAction) | #else#set($prevAction=true)#end<a onclick="duplicateLink(this);return false;" href="#toolLinkParam("$action" "doDuplicate_assignment" "assignmentId=$validator.escapeUrl($assignmentReference)")">$!tlang.getString("dupli") <span class="skip">$validator.escapeHtml($validator.limit($!assignment.getTitle(), 64))</span></a>#end
 											#if ($taggable && $allowAddAssignment)
 												#foreach ($provider in $providers)
 													#set ($helperInfo = false)
