--- a/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includePageBody.vm
+++ b/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includePageBody.vm
@@ -237,7 +237,7 @@
 			<!-- end include Bottom -->
 				</div>
 				<div class="sakaiCopyrightInfo">${bottomNavCopyright}</div>
-				<div class="serviceInfo">${bottomNavService} - ${bottomNavServiceVersion} - Sakai ${bottomNavSakaiVersion} (Kernel ${bottomNavKernelVersion}) - Server ${bottomNavServer}</div>
+				<div class="serviceInfo">${bottomNavService} - ${bottomNavServiceVersion} - Server ${bottomNavServer}</div>
 				#if ($showServerTime == "true")
 			 	<div class="server-time-container" aria-live="off">
 					#if ($showPreferredTzTime == "true")
