--- a/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
+++ b/custom_builds/142/portal/portal-10.x/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
@@ -53,7 +53,7 @@
 
 </ul>
 
-<span class="drop" tabindex="-1"></span>
+<span class="drop" tabindex="-1">Hello ${notreDameFirstName}</span>
 </span>
 </span>
 
