Display user info in portal like in Sakai 2.9

--- a/custom_builds/7/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
+++ b/custom_builds/7/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
@@ -78,7 +78,7 @@
 
 </ul>
 
-<span class="drop" tabindex="-1"></span>
+<span class="drop walsh-user-info" tabindex="-1">${loginUserDispName}</span>
 </span>
 </span>
 
