--- a/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
+++ b/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
@@ -71,7 +71,7 @@
 			#end
 
 </ul>
-<span class="drop" tabindex="-1"></span>
+<span class="drop" tabindex="-1">${loginUserDispName} | </span>
 </span>
 </span>
 
